# dialogs-to-dialogflow

./: alice_to_dialogflow.env  bot_config.env  dialogflow_proxy.env  docker-compose.yml
DialogflowProxy/: DialogflowProxy.csproj  Dockerfile  Program.cs  Startup.cs
alice_to_dialogflow/: Cargo.toml  Dockerfile
alice_to_dialogflow/src/: dialogflow.rs  dialogs.rs  dialogs_dialogflow_handler.rs  main.rs
alice_to_dialogflow/src/dialogflow/: request.rs  response.rs
alice_to_dialogflow/src/dialogs/: web_hook_request.rs  web_hook_response.rs
