[package]
name = "alice_to_dialogflow"
version = "0.1.0"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2018"

[dependencies]
warp = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
relegram = "0.1"
env_logger  = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
tempfile = "3.0"
log = "0.4"
lazy_static = "1.3.0"
config = "0.9.2"
notify = "4.0"
